<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dattienbkhn.travel.screen.main.mefragment.register.RegisterViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/create_acc"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_25"
            app:customFont='@{"Gotham-Book.otf"}' />

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_8"
            android:background="@drawable/shape_radius"
            android:textColorHint="@color/colorPrimaryDark">
            <EditText
                android:hint="@string/full_name"
                android:padding="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_8"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="@drawable/shape_radius"
            android:layout_marginTop="10dp">
            <EditText
                android:padding="@dimen/dp_8"
                android:hint="@string/email"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_8"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="@drawable/shape_radius"
            android:layout_marginTop="10dp">
            <EditText
                android:hint="@string/passwd"
                android:padding="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_8"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="@drawable/shape_radius"
            android:layout_marginTop="10dp">
            <EditText
                android:hint="@string/phone"
                android:padding="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/acc_already"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>
</layout>
