<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dattienbkhn.travel.screen.filter.FilterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15">

            <ImageView
                android:onClick="@{() -> viewModel.onBackClick()}"
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/back_pink" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/txt_setting_save"
                android:layout_toRightOf="@+id/img_back"
                android:paddingLeft="@dimen/dp_30"
                android:text="@string/filter"
                android:textColor="@android:color/black" />

            <TextView
                android:onClick="@{() -> viewModel.onSaveSetting()}"
                android:id="@+id/txt_setting_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/save_filter"
                android:textColor="@color/pink_FE007E" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/white_e2e2e9" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/place_type"
            android:textSize="@dimen/sp_18" />
        
        <LinearLayout
            android:onClick="@{() -> viewModel.onSeeTypeCheck()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:clickable="false"
                app:cbInit="@{safeUnbox(viewModel.isSeeTypeCheck)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_type"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="@{() -> viewModel.onFoodiesTypeCheck()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:clickable="false"
                app:cbInit="@{safeUnbox(viewModel.isFoodiesTypeCheck)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodies_type"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="@{() -> viewModel.onDrinkTypeCheck()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:clickable="false"
                app:cbInit="@{safeUnbox(viewModel.isDrinkTypeCheck)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drink_type"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="@{() -> viewModel.onStayTypeCheck()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:clickable="false"
                app:cbInit="@{safeUnbox(viewModel.isStayTypeCheck)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stay_type"/>
        </LinearLayout>
    </LinearLayout>
</layout>

