<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.dattienbkhn.travel.screen.profile.ProfileViewModel"/>

        <import type="android.view.View"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_15">

                <ImageView
                    android:onClick="@{() -> viewModel.onBackClick()}"
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_pink" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/txt_setting_save"
                    android:layout_toRightOf="@+id/img_back"
                    android:paddingLeft="@dimen/dp_30"
                    android:text="@string/profile"
                    android:textColor="@android:color/black" />

                <TextView
                    android:onClick="@{() -> viewModel.onSaveSetting()}"
                    android:id="@+id/txt_setting_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/save_filter"
                    android:textColor="@color/pink_FE007E" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_220">

                <ImageView
                    android:onClick="@{() -> viewModel.onCoverImageChangeClick()}"
                    android:id="@+id/img_cover"
                    android:src="@drawable/no_image"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_180" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:onClick="@{() -> viewModel.onAvatarChangeClick()}"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="@dimen/dp_2"
                    android:src="@drawable/no_image"/>

                <TextView
                    android:onClick="@{() -> viewModel.onCoverImageChangeClick()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_3"
                    android:paddingBottom="@dimen/dp_3"
                    android:paddingRight="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile_touch"
                    android:textColor="@android:color/white"
                    android:background="@drawable/shape_full_black_border"/>
            </RelativeLayout>

            <TextView
                android:onClick="@{() -> viewModel.onNameChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/profile_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:onClick="@{() -> viewModel.onNameChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@{viewModel.mName}"
                android:textSize="@dimen/sp_14"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white_e2e2e9"/>

            <TextView
                android:visibility="@{safeUnbox(viewModel.isAppAcc) ?View.VISIBLE :View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/profile_username"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:visibility="@{safeUnbox(viewModel.isAppAcc) ?View.VISIBLE :View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:text="dattienbkhn"
                android:textSize="@dimen/sp_14"/>

            <View
                android:visibility="@{safeUnbox(viewModel.isAppAcc) ?View.VISIBLE :View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white_e2e2e9"/>

            <TextView
                android:visibility="@{safeUnbox(viewModel.isAppAcc) ?View.VISIBLE :View.GONE}"
                android:onClick="@{() -> viewModel.onPassWdChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/profile_passwd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:visibility="@{safeUnbox(viewModel.isAppAcc) ?View.VISIBLE :View.GONE}"
                android:onClick="@{() -> viewModel.onPassWdChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/profile_passwd_star"
                android:textSize="@dimen/sp_14"/>

            <View
                android:visibility="@{safeUnbox(viewModel.isAppAcc) ?View.VISIBLE :View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white_e2e2e9"/>

            <TextView
                android:onClick="@{() -> viewModel.onGenderChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/profile_gender"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:onClick="@{() -> viewModel.onGenderChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@{viewModel.mGender}"
                android:textSize="@dimen/sp_14"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white_e2e2e9"/>

            <TextView
                android:onClick="@{() ->viewModel.onBirthdayChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/profile_birthday"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:onClick="@{() ->viewModel.onBirthdayChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@{viewModel.mBirthday}"
                android:textSize="@dimen/sp_14"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white_e2e2e9"/>

            <TextView
                android:onClick="@{() -> viewModel.onAddressChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/profile_address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:onClick="@{() -> viewModel.onAddressChangeClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@{viewModel.mAddress}"
                android:textSize="@dimen/sp_14"/>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</layout>
